[gd_scene load_steps=2 format=3 uid="uid://bynyonjm8ov00"]

[ext_resource type="Script" uid="uid://cihniiho2oa7f" path="res://scripts/ui/unit_info_panel.gd" id="1"]

[node name="UnitInfoPanel" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_bottom = 200.0
grow_horizontal = 0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Unit Name"

[node name="HPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "HP: 100/100"

[node name="APLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "AP: 18/18"

[node name="WeaponLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Weapon: AKM"

[node name="AmmoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ammo: 30/30"
